Add default font size variable; started styling about section button

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 /*
-=========
+---------
   COLORS
-=========
+---------
 */
 
 $color-primary: #55c57a;
@@ -15,9 +15,17 @@ $color-white: #fff;
 $color-black: #000;
 
 /*
-=========
+---------
+  FONT
+---------
+*/
+
+$default-font-size: 1.6rem;
+
+/*
+---------
   GRID
-=========
+---------
 */
 
 $grid-width: 114rem;
