--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -92,13 +92,13 @@ body {
 }
 
 .heading-tertiary {
-  font-size: 1.6rem;
+  font-size: $default-font-size;
   font-weight: 700;
   text-transform: uppercase;
 }
 
 .paragraph {
-  font-size: 1.6rem;
+  font-size: $default-font-size;
 
   // every child EXCEPT last-child
   &:not(:last-child) {
