--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,18 @@
 /* scss knows that base refers to _base.scss */
 /*
-=========
+---------
   COLORS
-=========
+---------
 */
 /*
-=========
+---------
+  FONT
+---------
+*/
+/*
+---------
   GRID
-=========
+---------
 */
 /* need to name keyframes list */
 @keyframes moveInLeft {
@@ -118,10 +123,31 @@ body {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.6rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
+
 .u-center-text {
   text-align: center; }
 
-.u-margin-bottom-8 {
+/*
+----------
+  margins
+----------
+*/
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem; }
+
+.u-margin-bottom-big {
   margin-bottom: 8rem; }
 
 .btn {
@@ -183,6 +209,14 @@ body {
     animation: moveInBottom .5s ease-out .4s;
     /* applies the styles at the 0% position of specified @keyframes list to element at start of animation; accomodates for delay of animation */
     animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px; }
 
 .row {
   max-width: 114rem;
