add size aand z-index  transition animation to imgs in about section

--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -4,12 +4,18 @@
   position: relative;
 
   &__photo {
+    // setting image size to relative units == good responsive design
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
     border-radius: 2px;
     
     // this positions (and sizes) relative to its closest positioned ancestor, if any; otherwise, it is placed relative to the initial containing block
     position: absolute;
+
+    // I don't think this is necessary...
+    // z-index: 1;
+
+    transition: all .2s;
 
     &--p1 {
       left: 0;
@@ -24,6 +30,13 @@
     &--p3 {
       left: 20%;
       top: 10rem;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+      z-index: 2;
+
     }
   }
 
