--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -17,6 +17,9 @@
 
     transition: all .2s;
 
+    // spaces the outline from the imgs
+    outline-offset: 2rem;
+
     &--p1 {
       left: 0;
       top: -2rem;
@@ -33,6 +36,9 @@
     }
 
     &:hover {
+      // defines the outline
+      outline: 1.5rem solid $color-primary;
+
       transform: scale(1.05);
       box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
       z-index: 2;
