--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -39,11 +39,16 @@
       // defines the outline
       outline: 1.5rem solid $color-primary;
 
-      transform: scale(1.05);
+      transform: scale(1.05) translateY(-.5rem);
       box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
       z-index: 2;
 
     }
+  }
+
+  // makes other images that are not hovered over shrink
+  &:hover &__photo:not(:hover){
+    transform: scale(.95);
   }
 
 }
