--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -6,9 +6,24 @@
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
+  // these are effectively fonts, so can be styled like them
   &__icon {
+    font-size: 6rem;
+    margin-bottom: .5rem;
+    color: transparent;
+    display: inline-block;
 
+    background-image: 
+      linear-gradient(
+        to right, 
+        $color-primary-light, 
+        $color-primary-dark
+      );
+    
+    background-clip: text;
+    -webkit-background-clip: text;  
   }
+
   &__text {
 
   }
