--- a/css/style.css
+++ b/css/style.css
@@ -261,7 +261,10 @@ body {
   padding: 2.5rem;
   text-align: center;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform .2s; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: .5rem;
