--- a/sass/components/_feature-box.scss
+++ b/sass/components/_feature-box.scss
@@ -5,6 +5,11 @@
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+  transition: transform .2s;
+
+  &:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+  }
 
   // these are effectively fonts, so can be styled like them
   &__icon {
@@ -20,6 +25,7 @@
         $color-primary-dark
       );
     
+    // this can be used on our icons because they are treated like fonts
     background-clip: text;
     -webkit-background-clip: text;  
   }
