--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,3 +25,9 @@
     transform: skewY(7deg);
   }
 }
+
+.section-tours {
+  background-color: $color-primary-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -9rem;
+}
