--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,14 +1,42 @@
 .card {
   perspective: 150rem;
   -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem;
 
   &__side {
     background-color: orangered;
+    color: #fff;
+    font-size: 2rem;
     height: 50rem;
-    transition: all .8s;
+    transition: all .8s ease; 
+
+    // positions both --front and --back on top of each other and gives them the width of the parent card
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    // hides the back of an element when flipped
+    backface-visibility: hidden;
+
+    &--front{
+      background-color: $color-white;
+    }
+
+    &--back{
+      background-color: green;
+      // back starts already flipped
+      // negative value to make rotation direction opposite when it flips back to its own 'front'
+      transform: rotateY(-180deg);
+    }
   }
   
-  &:hover &__side {
+  &:hover &__side--front {
     transform: rotateY(180deg);
+  }
+
+  &:hover &__side--back {
+    // because starts flipped, this flips it over
+    transform: rotateY(0);
   }
 }
