--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -20,7 +20,7 @@
     backface-visibility: hidden;
 
     border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color-dark, .15);
+    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
     &--front{
       background-color: $color-white;
