--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -4,13 +4,11 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem;
+  height: 52rem;
 
   &__side {
-    background-color: orangered;
-    color: #fff;
     font-size: 2rem;
-    height: 50rem;
+    height: 52rem;
     transition: all .8s ease; 
 
     // positions both --front and --back on top of each other and gives them the width of the parent card
@@ -58,6 +56,7 @@
     background-size: cover; 
     height: 23rem;
     background-blend-mode: screen;
+    // adds similar polygon shape as preceding sections
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     
@@ -74,8 +73,56 @@
     &--2 {
       background-image: url(../img/nat-5.jpg);
     }
+    
     &--3 {
       background-image: url(../img/nat-5.jpg);
+    }
+
+    
+  }
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+  // this is not nested under above because it should be treated as its own element
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    // adds same padding to breaks in h4 text
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-secondary-light, .85), 
+        rgba($color-secondary-dark, .85)
+      );
+    }
+  } 
+  &__details {
+    padding: 3rem;
+
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+
+      li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child){
+          border-bottom: 1px solid $color-primary-light-2;
+        }
+      }
     }
   }
 }
