--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -40,6 +40,22 @@
            $color-secondary-dark
         );
       }
+
+      &-2 {
+        background-image: linear-gradient(
+           to right bottom, 
+           $color-primary-light,
+           $color-primary-dark
+        );
+      }
+
+      &-3 {
+        background-image: linear-gradient(
+           to right bottom, 
+           $color-tertiary-light,
+           $color-tertiary-dark
+        );
+      }
     }
   }
   
@@ -71,11 +87,23 @@
         url(../img/nat-5.jpg);
     }
     &--2 {
-      background-image: url(../img/nat-5.jpg);
+      background-image:
+      linear-gradient(
+        to right bottom, 
+        $color-primary-light,
+        $color-primary-dark
+      ), 
+      url(../img/nat-6.jpg);
     }
     
     &--3 {
-      background-image: url(../img/nat-5.jpg);
+      background-image: 
+      linear-gradient(
+        to right bottom, 
+        $color-tertiary-light,
+        $color-tertiary-dark
+      ), 
+      url(../img/nat-7.jpg);
     }
 
     
@@ -105,6 +133,23 @@
         rgba($color-secondary-dark, .85)
       );
     }
+
+    &--2 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, .85), 
+        rgba($color-primary-dark, .85)
+      );
+    }
+
+    &--3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($color-tertiary-light, .85), 
+        rgba($color-tertiary-dark, .85)
+      );
+    }
+
   } 
   &__details {
     padding: 3rem;
