--- a/css/style.css
+++ b/css/style.css
@@ -459,3 +459,7 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0 15rem 0;
   margin-top: -9rem; }
+
+.section-stories {
+  padding: 15rem 0;
+  background-color: #f7f7f7; }
