--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -4,4 +4,13 @@
   box-shadow: 0 3rem 6rem rgba($color-black, .1);
   background-color: $color-white;
   border-radius: 3px;
+  padding: 6rem;
+  font-size: $default-font-size;
+
+  &__shape {
+    width: 15rem;
+    height: 15rem;
+    background-color: orangered ;
+    float: left;
+  }
 }
