--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -7,11 +7,12 @@
   padding: 6rem;
   padding-left: 9rem;
   font-size: $default-font-size;
+  transform: skewX(-12deg);
 
   &__shape {
     width: 15rem;
     height: 15rem;
-    background-color: orangered;
+    // background-color: orangered;
     // needs to be floated for shape-outside to function
     float: left;
 
@@ -24,6 +25,15 @@
     -webkit-clip-path: circle(50% at 50% 50%);
     clip-path: circle(50% at 50% 50%);
 
-    transform: translateX(-3rem);
+    transform: translateX(-3rem) skewX(12deg);
+  }
+
+  &__img {
+    // will be 100% of the parent story__shape div
+    height: 100%;
+  }
+
+  &__text {
+    transform: skewX(12deg);
   }
 }
