add caption styling

--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -26,6 +26,9 @@
     clip-path: circle(50% at 50% 50%);
 
     transform: translateX(-3rem) skewX(12deg);
+
+    // lets __caption be positioned relative to this 
+    position: relative;
   }
 
   &__img {
@@ -35,5 +38,17 @@
 
   &__text {
     transform: skewX(12deg);
+  }
+
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $color-white;
+    text-transform: uppercase;
+    font-size: 1.7rem;
+    text-align: center;
+
   }
 }
