--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,7 +2,7 @@
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($color-black, .1);
-  background-color: $color-white;
+  background-color: rgba($color-white, .6);
   border-radius: 3px;
   padding: 6rem;
   padding-left: 9rem;
@@ -70,7 +70,7 @@
 
   &:hover &__img {
     transform: translateX(-4rem) scale(1);
-    
+
     filter: blur(3px) brightness(80%);
   }
 }
