--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -34,5 +34,5 @@
 
 .section-stories {
   padding: 15rem 0;
-  background-color: $color-primary-light-1; 
+  position: relative; // for video positioning
 }
