--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -38,3 +38,11 @@ $default-font-size: 1.6rem;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+/*
+----------------
+  border-radii
+----------------
+*/
+
+$border-radius-small: .3rem;
