--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -36,3 +36,23 @@
   padding: 15rem 0;
   position: relative; // for video positioning
 }
+
+.section-book {
+  padding: 15rem 0;
+  background-image: 
+    linear-gradient(
+      to right bottom, 
+      $color-primary-light, 
+      $color-primary-dark
+  );
+}
+
+.book {
+  background-image: url(../../img/nat-10.jpg);
+  
+  background-size: 100%; // 'cover' would have the same result
+  border-radius: $border-radius-small;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+
+  height: 50rem;
+}
