--- a/css/style.css
+++ b/css/style.css
@@ -539,3 +539,6 @@ body {
   border-radius: 0.3rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
   height: 50rem; }
+  .book__form {
+    width: 50%;
+    padding: 6rem; }
