--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -62,4 +62,9 @@
   box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
 
   height: 50rem;
+
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
