--- a/css/style.css
+++ b/css/style.css
@@ -399,12 +399,21 @@ body {
     background-clip: text;
     -webkit-background-clip: text; }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
 .form__input {
   font-size: 1.5rem;
+  font-family: inherit;
   padding: 1.5rem 2rem;
   border-radius: 2px;
   background-color: rgba(255, 255, 255, 0.5);
   border: none; }
+
+.form__input:focus {
+  outline: none;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid #55c57a; }
 
 .story {
   width: 75%;
