--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,15 +1,25 @@
 .form {
 
-  &__group {
-
+  &__group:not(:last-child) {
+    margin-bottom: 2rem;
   }
 
   &__input {
     font-size: 1.5rem;
+    // for some reason the input placeholder texts don't automatically inherit the established font, so have to specify
+    font-family: inherit;
     padding: 1.5rem 2rem;
     border-radius: 2px;
     background-color: rgba($color-white, .5);
     border: none;
+  }
+
+  // removes default blue border and adds custom focus styling
+  &__input:focus {
+    outline: none;
+    box-shadow: 0 1rem 2rem rgba($color-black, .1);
+                  // width, style, color
+    border-bottom: 3px solid $color-primary;
   }
 
   &__label {
