change input font colors

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -18,6 +18,8 @@ $color-primary-light-1: #f7f7f7;
 $color-primary-light-2: #eee; 
 
 $color-grey-dark:#777;
+$color-grey-dark-2:#999;
+
 $color-white: #fff;
 $color-black: #000;
 
