add input label animation styling

--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,11 @@ body {
   font-size: 1.2rem;
   font-weight: 700;
   margin-left: 2rem;
-  margin-top: .7rem; }
+  margin-top: .7rem;
+  transition: all .3s; }
+
+.form__input:placeholder-shown + .form__label {
+  transform: translateY(-4rem); }
 
 .story {
   width: 75%;
