--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -18,6 +18,7 @@
     border-bottom: 3px solid transparent;
     width: 90%;
     display: block;
+    transition: all .3s;
 
       // removes default blue border and adds custom focus styling
     &:focus {
@@ -50,9 +51,9 @@
   }
 
   &__input:placeholder-shown + &__label{
-    // this hides the element, but it remains on the page
+    // hides the element, but it remains on the page
     opacity: 0;
-    // this actually takes the element off the page
+    // takes the element off the page
     visibility: hidden;
     transform: translateY(-4rem);
   }
