--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -57,4 +57,44 @@
     visibility: hidden;
     transform: translateY(-4rem);
   }
+
+  &__radio-group {
+    // used instead of floats to set radio buttons side-by-side
+    width: 49%;
+    display: inline-block;
+  }
+
+  &__radio-label {
+    font-size: $default-font-size;
+    // makes the arrow look like a pointer when hovering over this element
+    cursor: pointer;
+    position: relative;
+    padding-left: 4.5rem;
+  }
+
+  // custom buttons made from CSS
+  &__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid $color-primary;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 0;
+
+    &::after {
+      // remember there always has to be a content property set, even if it's nothing 
+      content: "";
+      display: block;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: $color-primary;
+    }
+  }
 }
