--- a/css/style.css
+++ b/css/style.css
@@ -440,6 +440,9 @@ body {
   width: 49%;
   display: inline-block; }
 
+.form__radio-input {
+  display: none; }
+
 .form__radio-label {
   font-size: 1.6rem;
   cursor: pointer;
@@ -454,18 +457,23 @@ body {
   display: inline-block;
   position: absolute;
   left: 0;
-  top: 0; }
+  top: -.4rem; }
   .form__radio-button::after {
     content: "";
     display: block;
-    height: 1rem;
-    width: 1rem;
+    height: 1.3rem;
+    width: 1.3rem;
     border-radius: 50%;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #55c57a; }
+    background-color: #55c57a;
+    opacity: 0;
+    transition: opacity .2s; }
+
+.form__radio-input:checked + .form__radio-label .form__radio-button::after {
+  opacity: 1; }
 
 .story {
   width: 75%;
