--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -64,6 +64,10 @@
     display: inline-block;
   }
 
+  &__radio-input {
+    display: none;
+  }
+
   &__radio-label {
     font-size: $default-font-size;
     // makes the arrow look like a pointer when hovering over this element
@@ -81,20 +85,28 @@
     display: inline-block;
     position: absolute;
     left: 0;
-    top: 0;
+    top: -.4rem;
 
     &::after {
       // remember there always has to be a content property set, even if it's nothing 
       content: "";
       display: block;
-      height: 1rem;
-      width: 1rem;
+      height: 1.3rem;
+      width: 1.3rem;
       border-radius: 50%;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: $color-primary;
+      opacity: 0;
+      transition: opacity .2s;
     }
+
+  }
+
+  // selects the ::after pseudo-element of the child <span> of .form__radio-label when the radio button itself is checked
+  &__radio-input:checked + &__radio-label &__radio-button::after {
+    opacity: 1;
   }
 }
