--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ body {
   /* psuedo-class for when mouse hovers over link */
   /* pseudo-element */
   /* applied only to header button */ }
-  .btn:link, .btn:visited {
+  .btn, .btn:link, .btn:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
@@ -197,7 +197,9 @@ body {
     transition: all .2s;
     /* for positioning of .btn::after pseudo-element */
     position: relative;
-    font-size: 1.6rem; }
+    font-size: 1.6rem;
+    border: none;
+    cursor: pointer; }
   .btn:hover {
     /* moves element up 3px (1rem == 10px) */
     transform: translateY(-0.3rem);
@@ -206,7 +208,8 @@ body {
       transform: scaleX(1.4) scaleY(1.6);
       /* sets to invisible */
       opacity: 0; }
-  .btn:active {
+  .btn:active, .btn:focus {
+    outline: none;
     transform: translateY(-1px);
     /* again, note */
     box-shadow: 0 0.5rem 0.7rem rgba(0, 0, 0, 0.2); }
