--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,4 +1,6 @@
-.u-center-text { text-align: center;}
+// note that !important is applied to all these properties because utility properties are meant to take precedence over everything else
+
+.u-center-text { text-align: center !important;}
 
 /*
 ----------
@@ -6,9 +8,9 @@
 ----------
 */
 
-.u-margin-bottom-small { margin-bottom: 1.5rem; }
-.u-margin-bottom-medium { margin-bottom: 4rem; }
-.u-margin-bottom-big { margin-bottom: 8rem; }
+.u-margin-bottom-small { margin-bottom: 1.5rem !important; }
+.u-margin-bottom-medium { margin-bottom: 4rem !important; }
+.u-margin-bottom-big { margin-bottom: 8rem !important; }
 
-.u-margin-top-big { margin-top: 8rem;}
-.u-margin-top-huge { margin-top: 10rem;}
+.u-margin-top-big { margin-top: 8rem !important;}
+.u-margin-top-huge { margin-top: 10rem !important;}
