--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -19,6 +19,7 @@ $color-primary-light-2: #eee;
 
 $color-grey-dark:#777;
 $color-grey-dark-2:#999;
+$color-grey-dark-3:#333;
 
 $color-white: #fff;
 $color-black: #000;
