--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -37,10 +37,9 @@
   }
 
   &__list {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include center;
+    list-style: none;
+    text-align: center;
   }
 
   &__item {
