--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -24,6 +24,8 @@
     background-image: radial-gradient($color-primary-light, $color-primary-dark);
     // only works on elements with a defined position 
     z-index: 1000;
+
+    transform: scale(80);
   }
 
   &__nav {
@@ -43,10 +45,29 @@
   }
 
   &__item {
-    
+    margin: 1rem;
   }
 
   &__link {
+    &:link,
+    &:visited {
+      font-size: 3rem;
+      font-weight: 300;
+      padding: 1rem 2rem;
+      color: $color-white;
+      text-decoration: none;
+      text-transform: uppercase;    
+      background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
+      background-size: 220%;
+      transition: all .4s;
+    }
     
+    &:hover,
+    &:active {
+      background-position: 100%;
+      color: $color-primary;
+      transform: translateX(1rem);
+    }
+
   }
 }
