--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -25,7 +25,7 @@
     // only works on elements with a defined position 
     z-index: 1000;
 
-    transform: scale(80);
+    transform: scale(86);
   }
 
   &__nav {
@@ -51,6 +51,7 @@
   &__link {
     &:link,
     &:visited {
+      display: inline-block;
       font-size: 3rem;
       font-weight: 300;
       padding: 1rem 2rem;
@@ -58,8 +59,13 @@
       text-decoration: none;
       text-transform: uppercase;    
       background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
-      background-size: 220%;
+      background-size: 230%;
       transition: all .4s;
+
+      span {
+        margin-right: 1.5rem;
+        display: inline-block;
+      }
     }
     
     &:hover,
