--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -13,6 +13,8 @@
     right: 6rem;
     z-index: 2000;
     box-shadow: 0 1rem 3rem rgba($color-black, .1);
+    text-align: center;
+    cursor: pointer;
   }
 
   &__background {
@@ -87,6 +89,9 @@
     }
 
   }
+
+  // FUNCTIONALITY //
+
   // the tilda (~) is the general sibling selector
   &__checkbox:checked ~ &__background {
     transform: scale(86);
@@ -97,4 +102,36 @@
     width: 100%;    
   }
 
+  // ICON //
+
+  &__icon {
+
+    position: relative;
+    margin-top: 3.3rem;
+
+    &,
+    &::before,
+    &::after {
+      width: 3rem;
+      height: 2px;
+      background-color: $color-grey-dark-3;
+      display: inline-block;
+    }
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all .2s;
+    }
+
+    &::before {top: -.8rem;}
+    &::after {top: .8rem;}
+  }
+
+  &__button:hover &__icon {
+    &::before {top: -1rem;}
+    &::after {top: 1rem;}
+  }
 }
