finish nav menu and list styling and animation

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -134,4 +134,18 @@
     &::before {top: -1rem;}
     &::after {top: 1rem;}
   }
+
+  &__checkbox:checked + &__button &__icon {
+    background-color: transparent;    
+  }
+
+  &__checkbox:checked + &__button &__icon::before {
+    top: 0;
+    transform: rotate(135deg);
+  }
+
+  &__checkbox:checked + &__button &__icon::after {
+    top: 0;
+    transform: rotate(-135deg);
+  }
 }
