--- a/css/style.css
+++ b/css/style.css
@@ -478,6 +478,14 @@ body {
 .form__radio-input:checked + .form__radio-label .form__radio-button::after {
   opacity: 1; }
 
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8); }
+
 .story {
   width: 75%;
   margin: 0 auto;
