--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -15,3 +15,11 @@
   /* positions in relation to self; moves left 50% of div width from left side, moves up 50% of div height from top*/
   transform: translate(-50%, -50% );
 }
+
+// jonas' mixin created after mine
+// @mixin absCenter {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50% );
+// }
