--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -5,8 +5,13 @@
   top: 0;
   left: 0;
   background-color: rgba($color-black, .8);
+  z-index: 9999;
 
   &__content {
-
+    @include center;
+    width: 75%;
+    height: 50rem;
+    background-color: $color-white;
+    box-shadow: 0 2rem 4rem rgba($color-black, .2);
   }
 }
