add popup content elements to HTML

--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -13,5 +13,6 @@
     height: 50rem;
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, .2);
+    border-radius: 3px;
   }
 }
