--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,9 +10,28 @@
   &__content {
     @include center;
     width: 75%;
-    height: 50rem;
+    // height: 50rem;// testing purposes
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, .2);
     border-radius: 3px;
+  }
+
+  &__left {
+    width: 33.333333%;
+    float: left;
+  }
+
+  &__right {
+    width: 66.6666667%;
+    float: left;
+  }
+
+  &__img {
+    display: block;
+    width: 100%;
+  }
+
+  &__text {
+    
   }
 }
