--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -14,16 +14,19 @@
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, .2);
     border-radius: 3px;
+    display: table;
   }
 
   &__left {
     width: 33.333333%;
-    float: left;
+    display: table-cell;
   }
 
   &__right {
     width: 66.6666667%;
-    float: left;
+    display: table-cell;
+    // aligns children in the middle, top to bottom, of element
+    vertical-align: middle;
   }
 
   &__img {
