finish popup styling

--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -15,11 +15,13 @@
     box-shadow: 0 2rem 4rem rgba($color-black, .2);
     border-radius: 3px;
     display: table;
+    overflow: hidden;
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
+
   }
 
   &__right {
@@ -27,6 +29,7 @@
     display: table-cell;
     // aligns children in the middle, top to bottom, of element
     vertical-align: middle;
+    padding: 3rem 5rem;
   }
 
   &__img {
@@ -35,6 +38,23 @@
   }
 
   &__text {
-    
+    font-size: 1.4rem;
+    margin-bottom: 4rem;   
+
+    -moz-column-count: 2;
+    -moz-column-gap: 4rem;
+    -moz-column-rule: 1px solid $color-primary-light-2;
+
+    column-count: 2;
+    column-gap: 4rem; // default is 1em, which is font-size of the current element, in this case 14px (1.4rem)
+    // creates a divider between columns
+    column-rule: 1px solid $color-primary-light-2;
+
+    // auto-adds hyphens to words at line breaks
+    // needs <html lang=""> set in html, any language
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    -webkit-hyphens: auto;
+    hyphens: auto;
   }
 }
