--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -7,6 +7,34 @@
   background-color: rgba($color-black, .8);
   z-index: 9999;
 
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s;
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+        color: $color-grey-dark;
+        position: absolute;
+        top: 2.5rem;
+        right: 2.5rem;
+        font-size: 3rem;
+        text-decoration: none;
+        display: inline-block;
+        transition: all .2s;
+        line-height: 1;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
+  }
+
   &__content {
     @include center;
     width: 75%;
@@ -33,6 +61,9 @@
   }
 
   &__img {
+
+    // note that images don't cover the left box when the popup is shrunk below a certain size;
+
     display: block;
     width: 100%;
   }
