--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,32 +11,9 @@
   visibility: hidden;
   transition: all .3s;
 
-  &:target {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  &__close {
-    &:link,
-    &:visited {
-        color: $color-grey-dark;
-        position: absolute;
-        top: 2.5rem;
-        right: 2.5rem;
-        font-size: 3rem;
-        text-decoration: none;
-        display: inline-block;
-        transition: all .2s;
-        line-height: 1;
-    }
-
-    &:hover {
-      color: $color-primary;
-    }
-  }
-
   &__content {
     @include center;
+
     width: 75%;
     // height: 50rem;// testing purposes
     background-color: $color-white;
@@ -44,6 +21,10 @@
     border-radius: 3px;
     display: table;
     overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(.25);
+    // .2s is for delay
+    transition: all .5s .2s;
   }
 
   &__left {
@@ -87,5 +68,34 @@
     -ms-hyphens: auto;
     -webkit-hyphens: auto;
     hyphens: auto;
+  }
+
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);   
+  }
+
+  &__close {
+    &:link,
+    &:visited {
+        color: $color-grey-dark;
+        position: absolute;
+        top: 2.5rem;
+        right: 2.5rem;
+        font-size: 3rem;
+        text-decoration: none;
+        display: inline-block;
+        transition: all .2s;
+        line-height: 1;
+    }
+
+    &:hover {
+      color: $color-primary;
+    }
   }
 }
