add and define breakpoints for  media query manager mixin

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,26 @@
 /* scss knows that base refers to _base.scss */
 /*
+---------------------
+  MEDIA QUERY MNGR
+---------------------
+
+0 - 600px: phone
+600 - 900px: tablet portrait
+900 - 1200px: tablet landscape
+1200 - 1800px: desktop (normal styles for desktop-first approach)
+1800px + : big desktop
+
+*/
+/*
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px (browser default)
+*/
+/*
 ---------
   COLORS
 ---------
@@ -65,6 +86,18 @@ html {
   /* browser default font-size is 16px; 62.5% of 16 is 10 */
   /* technique: setting root font to 10px makes it easy to mentally convert px to/from rem */
   font-size: 62.5%; }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 60%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 70%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 80%; } }
 
 body {
   /* width and height specifications now include any paddings or borders */
