--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -18,6 +18,27 @@ html {
 
   // this is not in _typography because it's more of a global sizing setting for what 1rem is
   font-size: 62.5%;
+
+  // example of passing property values to mixins with @content
+  // @include respond-phone {
+  //   font-size: 50%;
+  // }
+
+  @include respond(phone) {
+    font-size: 50%;
+  }
+  
+  @include respond(tab-port) {
+    font-size: 60%;
+  }
+
+  @include respond(tab-land) {
+    font-size: 70%;
+  }
+
+  @include respond(big-desktop) {
+    font-size: 80%;
+  }
 }
 
 // note that there is a body selector in _typography, too
