--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -23,3 +23,48 @@
 //   left: 50%;
 //   transform: translate(-50%, -50% );
 // }
+
+/*
+---------------------
+  MEDIA QUERY MNGR
+---------------------
+
+0 - 600px: phone
+600 - 900px: tablet portrait
+900 - 1200px: tablet landscape
+1200 - 1800px: desktop (normal styles for desktop-first approach)
+1800px + : big desktop
+
+*/
+
+@mixin respond-phone {
+  @media (max-width: 600px) { @content };
+}
+
+/*
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1em = 16px (browser default)
+*/
+
+
+
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    // 600px / 16px = 37.5em
+    @media (max-width: 37.5em) { @content }; // 600px
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) { @content }; // 900px
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) { @content }; // 1200px
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) { @content }; // 1800px
+  }
+}
