start media query styling, adjust font size and padding

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@ $breakpoint argument choices:
 - tab-land
 - big-desktop
 
+Order: Base + typography > general layout + grid > page layout > components
+
 1em = 16px (browser default)
 
 */
@@ -97,7 +99,12 @@ html {
 
 body {
   /* width and height specifications now include any paddings or borders */
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  /* applies padding around entire body */
+  padding: 3rem; }
+  @media (max-width: 56.25em) {
+    body {
+      padding: 0; } }
 
 body {
   /* font styling for child elements to inherit */
@@ -106,9 +113,7 @@ body {
   /* font-size: 16px; */
   /* 1.7x bigger than pre-defined line height */
   line-height: 1.7;
-  color: #777;
-  /* applies padding around entire body */
-  padding: 3rem; }
+  color: #777; }
 
 .heading-primary {
   color: #fff;
@@ -132,6 +137,10 @@ body {
     /* animation-iteration-count: 3; */
     /* delay before triggering animation */
     /* animation-delay: 3s; */ }
+    @media (max-width: 37.5em) {
+      .heading-primary--main {
+        letter-spacing: 1rem;
+        font-size: 5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -141,6 +150,9 @@ body {
     /* @keyframes list, duration, timing function */
     /* occurs at page load */
     animation: moveInRight 1s ease-out; }
+    @media (max-width: 37.5em) {
+      .heading-primary--sub {
+        letter-spacing: .5rem; } }
 
 .heading-secondary {
   font-size: 3.5rem;
@@ -153,6 +165,12 @@ body {
   -webkit-background-clip: text;
   letter-spacing: .2rem;
   transition: all .2s; }
+  @media (max-width: 56.25em) {
+    .heading-secondary {
+      font-size: 3rem; } }
+  @media (max-width: 37.5em) {
+    .heading-secondary {
+      font-size: 2.5rem; } }
   .heading-secondary:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
