--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -7,8 +7,6 @@ body {
     /* 1.7x bigger than pre-defined line height */
     line-height: 1.7;
     color:$color-grey-dark;
-    /* applies padding around entire body */
-    padding: 3rem;
 }
 
 .heading-primary {
@@ -38,6 +36,11 @@ body {
   
     /* delay before triggering animation */
     /* animation-delay: 3s; */
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-size: 5rem;
+    }
   }
   
   &--sub {
@@ -50,6 +53,10 @@ body {
     /* @keyframes list, duration, timing function */
     /* occurs at page load */
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: .5rem;
+    }
   }
 
   /* just a test */
@@ -84,6 +91,14 @@ body {
 
   // for skew effect
   transition: all .2s;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
